--- a/src/ore/Cargo.toml
+++ b/src/ore/Cargo.toml
@@ -44,6 +44,7 @@ tokio-openssl = { version = "0.6.3", optional = true }
 # there is no global `tracing` subscriber.
 tracing-subscriber = { version = "0.3.15", default-features = false, features = ["env-filter", "fmt", "tracing-log"], optional = true }
 zeroize = { version = "1.5.7", features = ["serde"], optional = true }
+itertools = "0.10.4"
 
 # For the `tracing` feature
 ansi_term = { version = "0.12.1", optional = true }
