--- a/src/adapter/Cargo.toml
+++ b/src/adapter/Cargo.toml
@@ -14,7 +14,7 @@ chrono = { version = "0.4.23", default-features = false, features = ["std"] }
 const_format = "0.2.30"
 dec = "0.4.8"
 derivative = "2.2.0"
-differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow.git" }
+differential-dataflow = { path = "/home/gabor/differential-dataflow" }
 enum-kinds = "0.5.1"
 fail = { version = "0.5.1", features = ["failpoints"] }
 futures = "0.3.25"
