--- a/src/persist-client/Cargo.toml
+++ b/src/persist-client/Cargo.toml
@@ -34,7 +34,7 @@ async-stream = "0.3.3"
 async-trait = "0.1.59"
 bytes = "1.3.0"
 clap = { version = "3.2.20", features = [ "derive" ] }
-differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow.git" }
+differential-dataflow = { path = "/home/gabor/differential-dataflow" }
 futures = "0.3.25"
 futures-util = "0.3"
 mz-build-info = { path = "../build-info" }
