--- a/src/persist/Cargo.toml
+++ b/src/persist/Cargo.toml
@@ -29,7 +29,7 @@ aws-types = "0.53.0"
 base64 = "0.13.1"
 bytes = "1.3.0"
 deadpool-postgres = "0.10.3"
-differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow.git" }
+differential-dataflow = { path = "/home/gabor/differential-dataflow" }
 fail = { version = "0.5.1", features = ["failpoints"] }
 futures-util = "0.3.25"
 once_cell = "1.16.0"
