--- a/src/stash/Cargo.toml
+++ b/src/stash/Cargo.toml
@@ -11,7 +11,7 @@ name = "postgres"
 harness = false
 
 [dependencies]
-differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow.git" }
+differential-dataflow = { path = "/home/gabor/differential-dataflow" }
 fail = { version = "0.5.1", features = ["failpoints"] }
 futures = "0.3.25"
 mz-ore = { path = "../ore", features = ["metrics", "network", "async", "test"] }
