--- a/src/storage-client/Cargo.toml
+++ b/src/storage-client/Cargo.toml
@@ -17,7 +17,7 @@ bytes = "1.3.0"
 chrono = { version = "0.4.23", default-features = false, features = ["std"] }
 dec = "0.4.8"
 derivative = "2.2.0"
-differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow.git" }
+differential-dataflow = { path = "/home/gabor/differential-dataflow" }
 futures = "0.3.25"
 http = "0.2.8"
 itertools = { version = "0.10.5" }
