--- a/src/transform/Cargo.toml
+++ b/src/transform/Cargo.toml
@@ -7,7 +7,7 @@ rust-version.workspace = true
 publish = false
 
 [dependencies]
-differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow.git" }
+differential-dataflow = { path = "/home/gabor/differential-dataflow" }
 itertools = "0.10.5"
 mz-compute-client = { path = "../compute-client" }
 mz-expr = { path = "../expr" }
